--- a/presentacion/includes/css/demo.css
+++ b/presentacion/includes/css/demo.css
@@ -27,14 +27,14 @@ input:hover {
 input, fieldset {
 	font-size: 1em;
 	margin: 0;
-	padding: 0;
 	border: 0;
 }
 input {
 	color: inherit;
 	line-height: 1.5;
 	height: 1.5em;
-	padding: 1.25em 1em;
+	padding-right: 5px;
+    padding-left: 5px;
 }
 input:focus {
 	outline: none;
