--- a/presentacion/includes/plug-in/jquery-ui-1.11.4/jquery-ui.css
+++ b/presentacion/includes/plug-in/jquery-ui-1.11.4/jquery-ui.css
@@ -848,6 +848,7 @@ body .ui-tooltip {
 	border: 1px solid #dddddd;
 	background: #ffffff;
 	color: #333333;
+	height: auto !important;
 }
 .ui-widget-content a {
 	color: #333333;
