--- a/presentacion/includes/css/style-paciente-prof.css
+++ b/presentacion/includes/css/style-paciente-prof.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,900);
+/*@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,900);*/
 
 *:focus {
     outline: 0;
