--- a/presentacion/includes/css/demo.css
+++ b/presentacion/includes/css/demo.css
@@ -180,6 +180,31 @@ p {
     font-size: 18px;
 }
 
-a .icon {
-   color: #17294b; 
+fieldset {
+    width: 50%;
 }
+
+.tabla {
+    border-collapse: collapse;
+    border: 0px;
+}
+
+.tabla th, .tabla td {
+    border: 0px;
+    padding: 20px;
+    text-align: left;
+    border-bottom: 0px solid #ddd;
+}
+
+.tabla th {
+    border: 0px;
+    height: 20px;
+    text-align: center;
+    vertical-align: bottom;
+    background-color: #17294B;
+    color: white;
+}
+
+.tabla tr:hover {background-color: #f5f5f5}
+
+.tabla tr:nth-child(even) {background-color: #f2f2f2}
