--- a/presentacion/historial_clinico/css/component.css
+++ b/presentacion/historial_clinico/css/component.css
@@ -79,6 +79,7 @@
 	margin-top: 0px;
 	padding: 0 0 10px 0;
 	border-bottom: 1px solid rgba(255,255,255,0.4);
+	font-size: 0.9em;
 }
 
 /* The triangle */
