--- a/presentacion/includes/css/demo.css
+++ b/presentacion/includes/css/demo.css
@@ -208,3 +208,64 @@ fieldset {
 .tabla tr:hover {background-color: #f5f5f5}
 
 .tabla tr:nth-child(even) {background-color: #f2f2f2}
+
+.contenedorPaciente {
+    padding: 20px 30px 20px 30px;
+    overflow: hidden;
+    width:auto;
+    height:auto;
+    border-color: black;
+    border-width: 0pt;
+    border-style: solid;
+    background-color:#111e37;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.datosPaciente {
+    margin: 0px 0px 0px 10px;
+    float:left;
+    top: 10px;
+    left: 10px;
+}
+
+.imagenSexoPacienteHombre {
+    margin: 10px 10px 10px 10px;
+    width: 100px;
+    height: 100px;
+    float: right;
+    top:10px;
+    left:200px;
+    background-image: url(../images/hombre.png);
+    background-color:#FFFFFF;
+    background-size: contain;
+}
+
+.imagenSexoPacienteMujer {
+    margin: 10px 10px 10px 10px;
+    width: 100px;
+    height: 100px;
+    float: right;
+    top: 10px;
+    left: 200px;
+    background-image: url(../images/mujer.png);
+    background-color:#FFFFFF;
+    background-size: contain;
+}
+
+.imagenInterrogacion {
+    width: 100px;
+    height: 100px;
+    background-image: url(../images/question_white.png);"
+    display:block;
+    margin:0 auto 0 auto;
+}
+
+.interrogacionMensaje {
+    border: 0pt;
+    border-color: black;
+    border-style: solid;
+    width: 400px;
+    position: relative;
+    left: 10px;
+}
