--- a/presentacion/includes/css/demo.css
+++ b/presentacion/includes/css/demo.css
@@ -18,6 +18,12 @@ a {
 	color: #FFFFFF;
 	text-decoration: none;
 }
+
+.iconoBlue {
+    color: #17294B;
+    text-decoration: none;
+}
+
 .bshadow0, input {
 	box-shadow: inset 0 -2px #e7e7e7;
 }
@@ -209,6 +215,29 @@ fieldset {
 
 .tabla tr:nth-child(even) {background-color: #f2f2f2}
 
+.tabla2 {
+    border: 0px;
+}
+
+.tabla2 th, .tabla2 td {
+    border: 0px;
+    padding: 5px;
+    text-align: center;
+    border-bottom: 0px solid #ddd;
+}
+
+.tabla2 th {
+    border: 0px;
+    height: 10px;
+    text-align: center;
+    background-color: #17294B;
+    color: white;
+}
+
+.tabla2 tr:hover {background-color: #f5f5f5}
+
+.tabla2 tr:nth-child(even) {background-color: #f2f2f2}
+
 .contenedorPaciente {
     padding: 20px 30px 20px 30px;
     overflow: hidden;
@@ -217,7 +246,7 @@ fieldset {
     border-color: black;
     border-width: 0pt;
     border-style: solid;
-    background-color:#111e37;
+    background-color:#17294B;
     color: #fff;
     border-radius: 5px;
 }
