--- a/presentacion/menu/css/default.css
+++ b/presentacion/menu/css/default.css
@@ -21,10 +21,8 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	color: #fff;
-	font-weight: 400;
-	min-height: 900px;
-	background: #f0f0f0;
-	background-image: url(../../includes/images/pattern.png);
+	font-weight: 400px;
+	min-height: 400px;
 }
 
 a {
