--- a/presentacion/includes/css/demo.css
+++ b/presentacion/includes/css/demo.css
@@ -298,3 +298,13 @@ fieldset {
     position: relative;
     left: 10px;
 }
+
+.imagenLogoW {
+    width: 50px;
+    height: 50px;
+    display:block;
+    margin:0 auto 0 auto;
+    background-image: url(../images/logow.png);
+    background-size: contain;
+    margin-top: 0px;
+}
