agrego plug-in de notificacion y algunos arreglos

--- a/presentacion/includes/css/iconos.css
+++ b/presentacion/includes/css/iconos.css
@@ -22,6 +22,20 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+.icon2:before {
+	font-family: 'helium';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	font-size: 2em;
+	display: inline-block;
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 
 .icon-zip:before {
 	content: "\e600";
