--- a/presentacion/includes/plug-in/jqGrid_5.0.2/css/ui.jqgrid.css
+++ b/presentacion/includes/plug-in/jqGrid_5.0.2/css/ui.jqgrid.css
@@ -133,7 +133,7 @@
 /* toolbar */
 .ui-jqgrid .ui-userdata {border-left: 0 none;    border-right: 0 none;	height : 27px;overflow: hidden;	}
 /*Modal Window */
-.ui-jqdialog { font-size:11px !important; }
+.ui-jqdialog { font-size:11px !important; z-index: 9000 !important;}
 .ui-jqdialog { display: none; width: 300px; position: absolute; padding: .2em; font-size:11px; overflow:visible;}
 .ui-jqdialog .ui-jqdialog-titlebar { padding: .3em .2em; position: relative; height:20px;}
 .ui-jqdialog .ui-jqdialog-title { margin: .3em .2em .2em .2em;} 
