--- a/presentacion/includes/css/demo.css
+++ b/presentacion/includes/css/demo.css
@@ -174,6 +174,7 @@ p {
 
 .button-secondary {
     color: white;
+    border: none;
     border-radius: 4px;
     background: #17294b; /* this is a light blue */
     height: 40px;
