--- a/presentacion/internacion/includes/css/style1.css
+++ b/presentacion/internacion/includes/css/style1.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display+SC:400italic,700,900|Raleway:500|Martel+Sans:400,700);
+
 @font-face {
   font-weight: normal;
   font-style: normal;
@@ -65,7 +65,7 @@ button:focus {
   height: 100%;
   height: 100vh;
   left: 0;
-  padding: 2em 1em;
+  padding: 0em 1em;
 }
 
 .sidebar h1 {
@@ -165,6 +165,7 @@ button:focus {
   display: block;
   color: inherit;
   text-align: left;
+  cursor: pointer;
 }
 
 .related a:hover,
@@ -461,9 +462,8 @@ button:focus {
 }
 
 .meta__avatar {
-  display: block;
-  margin: 2em auto;
-  height: 50px;
+  margin: 1em auto;
+  height: 40px;
 }
 
 .meta_logo {
@@ -633,7 +633,7 @@ button:focus {
   overflow: hidden;
   height: 0;
   opacity: 0;
-  padding: 60px 60px 80px 60px;
+  padding: 0px 60px 80px 60px;
   pointer-events: none;
   font-size: 0.85em;
 }
@@ -670,6 +670,7 @@ button:focus {
   font-size: 1em;
   margin: 0 auto 2em;
   max-width: 1200px;
+  float: left;
 }
 .meta--full .meta__author {
   display: block;
@@ -678,7 +679,6 @@ button:focus {
   margin-bottom: 20px;
 }
 .meta--full .meta__author::before {
-  content: 'by ';
   font-weight: normal;
 }
 .meta--full .meta__category {
@@ -937,6 +937,7 @@ button:focus {
   .sidebar.sidebar--open {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+    position: initial;
   }
 
   .sidebar.sidebar--open ~ .main {
@@ -949,6 +950,7 @@ button:focus {
 
   .menu-toggle {
     display: inline-block;
+    margin-top: 32px;
   }
 
   .sidebar .close-button {
@@ -962,10 +964,6 @@ button:focus {
 
   .content__item {
     padding: 80px 20px 40px;
-  }
-
-  .content .close-button {
-    padding: 10px 20px;
   }
 
   .content .close-button::before {
@@ -985,6 +983,24 @@ button:focus {
   body #cdawrap {
     display: none;
   }
+}
+
+.izq {
+  float:left;
+  text-align: center;
+}
+
+.datosPersona {
+  float: left;
+  margin: 2em;
+}
+
+.contenedorCabecera{
+  float: left;
+}
+
+.botones{
+  z-index: 9999999999 !important;
 }
 
 /*# sourceMappingURL=style1.css.map */
