--- a/presentacion/includes/css/demo.css
+++ b/presentacion/includes/css/demo.css
@@ -180,6 +180,14 @@ p {
     height: 40px;
  }
 
+.button-secondary2 {
+background: #17294b none repeat scroll 0 0;
+border: medium none;
+border-radius: 4px;
+color: white;
+height: 30px;
+}
+
 .topright {
     position: absolute;
     top: 45px;
