--- a/presentacion/turno/includes/css/fichaFacturacionPrint.css
+++ b/presentacion/turno/includes/css/fichaFacturacionPrint.css
@@ -64,9 +64,16 @@ body {
     height: 100%;
 }
 
-table{ border-collapse:collapse; }
+table{
+    border-collapse:collapse;
+    line-height: 1em !important;
+}
 
 font{ font-size: 10px; }
+
+.lc{
+    font-size: 8px;
+}
 
 .tbord{ border: 2px solid; }
 
@@ -84,6 +91,8 @@ font{ font-size: 10px; }
 
 .tH1 { height: 1em; }
 
+.tH12 { height: 1.5em; }
+
 .tH2 { height: 2em; }
 
 .tH8 { height: 8em; }
@@ -91,5 +100,7 @@ font{ font-size: 10px; }
 .al { text-align: right; }
 
 .acd { text-align: center; vertical-align: bottom; }
+
+.ac { text-align: center; }
 
 .alt { text-align: left; vertical-align: top; }
