borro leyenda situ en todos los php y quito epicrisis que ahun no se utiliza

--- a/presentacion/includes/index.html
+++ b/presentacion/includes/index.html
@@ -16,7 +16,7 @@
         <div id="barraImage" >
         </div>
         <div id="navegar" >
-            <p>&nbsp;<a href="/sistemas.php3">Sistema Salud</a>&nbsp;&gt;
+            <p>&nbsp;<a href="/sistemas.php3">Sistema</a>&nbsp;&gt;
             <a>Vista de Iconos</a></p>
         </div>
         <!-- /navegar -->
